# scitex-scholar

./: .envrc  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: auto-merge-to-develop.yaml  cla.yml  import-smoke-on-ubuntu-py3-12.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-scholar-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/dev/: cli-audit-dict.yaml  config.yaml
docs/sphinx/: cli.rst  conf.py  index.rst  installation.rst
docs/sphinx/api/: index.rst
src/scitex_scholar/: README.md  __init__.py  __main__.py  _cli_main.py  _mcp_server.py  filters.py
src/scitex_scholar/_cli/: __init__.py  aliases.py  auth.py  bibtex.py  gui.py  library.py  mcp.py  paper.py  pdf.py  skills.py
src/scitex_scholar/_django/: __init__.py  _db.py  _server.py  _standalone_urls.py  apps.py  manifest.json  settings.py  urls.py  views.py
src/scitex_scholar/_mcp/: handlers.py
src/scitex_scholar/_skills/scitex-scholar/: 01_installation.md  02_python-api.md  02_quick-start.md  03_cli-reference.md  03_python-api.md  04_cli-reference.md  06_api-overview.md  06_quick-start.md  09_mcp-tools.md  10_authentication.md  11_search.md  12_doi-resolution.md  13_bibtex-enrichment.md  14_pdf-download.md  15_library-management.md  16_semantic-highlight.md  20_env-vars.md  30_extraction-lessons.md  SKILL.md
src/scitex_scholar/_sphinx_html/: .buildinfo  cli.html  genindex.html  index.html  installation.html  mcp.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  semantic_highlight.html
src/scitex_scholar/_sphinx_html/.doctrees/: cli.doctree  index.doctree
src/scitex_scholar/_sphinx_html/_modules/: index.html  scitex_scholar.html
src/scitex_scholar/_sphinx_html/api/: auth.html  browser.html  citation_graph.html  config.html  core.html  filters.html  formatting.html  impact_factor.html  index.html  metadata_engines.html  migration.html  pdf_download.html
src/scitex_scholar/auth/: ScholarAuthManager.py
src/scitex_scholar/auth/core/: AuthenticationGateway.py  BrowserAuthenticator.py
src/scitex_scholar/auth/gateway/: _OpenURLLinkFinder.py  _OpenURLResolver.py  _resolve_functions.py
src/scitex_scholar/auth/providers/: EZProxyAuthenticator.py  OpenAthensAuthenticator.py  (+1 more)
src/scitex_scholar/browser/: ScholarBrowserManager.py
src/scitex_scholar/citation_graph/: visualization.py
src/scitex_scholar/cli/: README.md  _mcp_commands.py  open_browser_monitored.py
src/scitex_scholar/config/: ScholarConfig.py
src/scitex_scholar/core/: Papers.py  Scholar.py  journal_normalizer.py  oa_cache.py
src/scitex_scholar/docs/: 05_DETAILS_FOR_DEVELOPERS.md  template.py
src/scitex_scholar/gui/: _app.py
src/scitex_scholar/integration/: MIGRATION.md  README.md
src/scitex_scholar/jobs/: _errors.py
src/scitex_scholar/local_dbs/: unified.py
src/scitex_scholar/pdf_download/: ScholarPDFDownloader.py  _cli.py
src/scitex_scholar/pdf_highlight/: _annotator.py  _classifier.py  _cli.py  highlighter.py
src/scitex_scholar/pipelines/: ScholarPipelineBibTeX.py  ScholarPipelineParallel.py  ScholarPipelineSingle.py  SearchQueryParser.py  _single_steps.py
src/scitex_scholar/search_engines/: ScholarSearchEngine.py
src/scitex_scholar/storage/: BibTeXHandler.py  PaperIO.py  ScholarLibrary.py  _LibraryCacheManager.py  _library_audit.py  _project_reconcile.py
src/scitex_scholar/url_finder/: ScholarURLFinder.py
src/scitex_scholar/verify_cites/: __init__.py  __main__.py  _classify.py  _cli.py  _core.py  _model.py  _resolve.py  _tex.py
tests/: conftest.py
tests/develop/: test_audit.py
tests/examples/: test_examples_smoke.py
tests/integration/: test_atomic_write.py  test_auth_alias.py  test_browser_integration.py  test_clean_abstract.py  test_clew_edge.py  test_clew_integration.py  test_cross_package_imports.py  test_download_status.py  test_ensure_workspace_export.py  test_hub_import_contract.py  test_package_import.py  test_pdf_highlight.py
tests/scitex_scholar/: test__cli_main.py
tests/scitex_scholar/_cli/: test_gui.py  test_library.py
tests/scitex_scholar/_django/: conftest.py  test__server.py  test_settings.py  test_views.py
tests/scitex_scholar/_mcp/: test_all_handlers.py
tests/scitex_scholar/_utils/: test_papers_utils.py
tests/scitex_scholar/auth/: test_ScholarAuthManager.py
tests/scitex_scholar/browser/: test_ScholarBrowserManager.py
tests/scitex_scholar/citation_graph/: test_builder.py
tests/scitex_scholar/cli/: test___main__.py  test__materialize.py  test__project_tree.py  test_noun_verb_grammar.py
tests/scitex_scholar/config/: test_PublisherRules.py
tests/scitex_scholar/core/: test_journal_normalizer.py  test_oa_cache.py
tests/scitex_scholar/docs/: test_template.py
tests/scitex_scholar/examples/: test_00_config.py  test_examples_directory.py  test_zotero_integration.py
tests/scitex_scholar/gui/: test__app.py
tests/scitex_scholar/impact_factor/: test_ImpactFactorEngine.py
tests/scitex_scholar/integration/: test_base.py
tests/scitex_scholar/jobs/: test__errors.py
tests/scitex_scholar/local_dbs/: test_crossref_scitex.py
tests/scitex_scholar/metadata_engines/: test_ScholarEngine.py
tests/scitex_scholar/migration/: test__connected_papers.py
tests/scitex_scholar/pdf_download/: test__cli.py
tests/scitex_scholar/pdf_highlight/: test__annotator.py
tests/scitex_scholar/pipelines/: test_ScholarPipelineBibTeX.py
tests/scitex_scholar/search_engines/: test__BaseSearchEngine.py
tests/scitex_scholar/storage/: test_BibTeXHandler.py  test__library_audit.py  test__library_dedupe.py  test__library_index.py
tests/scitex_scholar/url_finder/: test_ScholarURLFinder.py
tests/scitex_scholar/verify_cites/: test__classify.py  test__cli.py  test__core.py  test__model.py  test__resolve.py  test__tex.py  test_verify_cites.py
tests/skills/: test_skills_quality.py
(+837 files in other folders)
