[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-scholar"
version = "1.4.0"
description = "Scientific paper search, enrichment, download, and management for the SciTeX ecosystem"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" },
]
keywords = [
    "scientific",
    "scholar",
    "literature",
    "bibtex",
    "pdf-download",
    "metadata",
    "research",
    "mcp",
    "mcp-server",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "click>=8.0",
    "mcp",
    # Peer standalones replacing the previous `scitex[session]` umbrella
    # (PS-139). Imported directly from their peer module:
    #   storage/PaperIO.py, pdf_download/_cli.py, impact_factor/jcr/*  →
    #     `import scitex_session as session` for session.start/close
    #   pipelines/_single_steps.py, cli/handlers/project_handler.py    →
    #     `import scitex_io` for load/save
    # matplotlib is explicit because scitex-session enters/exits the @session
    # context with the user-supplied `plt` module; without it the demo
    # trailers in storage/ + pdf_download/ would NameError.
    "scitex-session>=0.1.5",
    "matplotlib>=3.5.0",
    "scitex-io>=0.2.0",
    "scitex-browser>=0.1.6",
    "scitex-logging>=0.1.0",
    # playwright is reached at top-level import (ScholarBrowserManager →
    # scitex_browser.debugging → playwright.async_api). Keep it as a core
    # dep so `pip install scitex-scholar` yields an importable package.
    "playwright>=1.40.0",
    # aiohttp is imported at module level in core/journal_normalizer,
    # core/open_access, core/oa_cache, and several metadata engines.
    "aiohttp>=3.8.0",
    # pymupdf is imported at module level in pdf_highlight/*.
    "pymupdf>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "bibtexparser>=1.4.0",
    "feedparser>=6.0.0",
    "httpx>=0.24.0",
    "nest-asyncio>=1.5.0",
    "pandas>=1.5.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.28.0",
    "sql-manager>=1.0.0",
    "sqlalchemy>=2.0.0",
    "tenacity>=8.0.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
]
clew = [
    "scitex-clew>=0.1.0",
]
export = [
    "openpyxl>=3.1.0",
]
mcp = [
    "fastmcp>=2.0.0",
]
pdf = [
    "pdfplumber>=0.9.0",
]
server = [
    "aiohttp>=3.8.0",
    "flask>=2.3.0",
]
watch = [
    "watchdog>=3.0.0",
]
dev = [
    "scitex-dev>=0.11.7",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "numpy>=1.21.0",
    # Mirror all optional extras so a fresh `pip install -e .[dev]`
    # runs the full test suite without ImportError on guarded imports.
    "playwright>=1.40.0",
    "openpyxl>=3.1.0",
    "fastmcp>=2.0.0",
    "aiohttp>=3.8.0",
    "flask>=2.3.0",
    "watchdog>=3.0.0",
    # tests/integration/test_clew_integration.py — used (with importorskip)
    # to exercise the optional scitex-clew provenance path in storage/PaperIO.
    "scitex-clew>=0.1.0",
    # `[pdf]` extra completeness; pdfplumber is the bundled PDF text-layer
    # backend exercised by pdf_highlight/* code paths.
    "pdfplumber>=0.9.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-scholar[browser]",
    "scitex-scholar[clew]",
    "scitex-scholar[export]",
    "scitex-scholar[mcp]",
    "scitex-scholar[pdf]",
    "scitex-scholar[server]",
    "scitex-scholar[watch]",
]

[project.scripts]
scitex-scholar = "scitex_scholar._cli_main:cli"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-scholar"
Documentation = "https://scitex-scholar.readthedocs.io"
Repository = "https://github.com/ywatanabe1989/scitex-scholar.git"
Issues = "https://github.com/ywatanabe1989/scitex-scholar/issues"

[project.entry-points."scitex_dev.docs"]
scitex-scholar = "scitex_scholar"

[project.entry-points."scitex_dev.skills"]
scitex-scholar = "scitex_scholar"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_scholar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# importlib mode avoids module-name collisions across test subdirs (e.g.
# two `test_base.py` files in different packages) without requiring
# `__init__.py` files everywhere.
addopts = "-v --tb=short --cov=scitex_scholar --cov-report=term-missing --import-mode=importlib"

[tool.coverage.run]
# Subprocess-coverage wiring (general/05_development_06_subprocess-coverage.md).
# `parallel = true` lets every child Python interpreter (test_demos.py
# `python -m`, `jupyter nbconvert --execute`, pytest-xdist) write its own
# `.coverage.<host>.<pid>` shard; `pytest-cov` runs `coverage combine` at
# session end. `concurrency = ["multiprocessing", "thread"]` covers both
# subprocess.run and threaded test paths.
parallel = true
source = ["scitex_scholar"]
concurrency = ["multiprocessing", "thread"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Project-wide pattern: files set `__FILE__ = __file__` and
# `__DIR__ = os.path.dirname(__FILE__)` between `import os` and the rest
# of the module imports, which triggers E402 spuriously.
"src/scitex_scholar/**/*.py" = ["E402"]
"tests/**/*.py" = ["E402"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples"]

[tool.pyright]
include = ["src"]
# Translator files are thin bs4 wrappers tested at integration level; strict
# type-checking produces noise without catching real bugs.
exclude = [
    "**/__pycache__",
    # Translator files are thin bs4 wrappers; integration-tested.
    "src/scitex_scholar/url_finder/translators/_individual",
    # Bundled skill scripts live under src/ for distribution but are
    # not part of the library's type surface.
    "src/scitex_scholar/.claude",
    "src/scitex_scholar/docs",
    # Hidden backup/experimental directories (not part of the package surface).
    "**/.combined-*",
]
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = false
# Silence categories dominated by false positives in this codebase:
# - scitex-logging adds .success() to stdlib Logger (pyright can't see it)
# - bs4 / mcp / pydantic-derived types return structural Unions pyright rejects
# - mixin classes rely on host-class attributes pyright can't infer
# - `param: str = None` pattern is idiomatic here and not treated as a bug
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
reportCallIssue = "none"
reportOptionalMemberAccess = "none"
reportOptionalCall = "none"
reportOptionalSubscript = "none"
reportOptionalIterable = "none"

[tool.scitex_dev]
# §6 (MCP-parity) opt-out. scitex-scholar is a service/workflow package: its
# real interface is the Scholar/Papers classes plus stateful MCP workflow
# tools (authenticate, search_papers, download_pdf, jobs, ...). The public
# Python functions in __all__ (to_bibtex, to_ris, apply_filters,
# clean_abstract, citation-graph helpers) are auxiliary pure-data helpers,
# not a flat operation set meant to mirror the tool surface 1:1. The two
# surfaces are different *kinds* of thing by design, so the API<->MCP-tool
# parity heuristic is a false positive here (same pattern as figrecipe).
mcp_parity_exempt = true
